Modify directory structure

--- a/javatests/com/example/sort/BUILD
+++ b/javatests/com/example/sort/BUILD
@@ -5,7 +5,7 @@ java_test(
     size = "small",
     srcs = glob(["*Test.java"]),
     deps = [
-        "//src/main/java/com/example/sort:sort-lib",
+        "//java/com/example/sort:sort-lib",
         "@maven//:junit_junit",
     ]
 )
